blog post align text fixed

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -65,3 +65,12 @@
   }
 }
 
+
+.w-richtext figure + p {
+  text-align: center;
+
+  & a {
+    color: #303030;
+    opacity: .5;
+  }
+}
